--- a/plugins/templates/default_response.html
+++ b/plugins/templates/default_response.html
@@ -71,6 +71,7 @@
    <p>QC Workflow: <strong>{{ data['qc_workflow'] }}</strong></p>
    <p>Email Address: <strong>{{ data['email_address'] }}</strong></p>
    <p>Jira Ticket: <strong>{{ data['jira_ticket'] }}</strong></p>
+   <p>Jira Ticket Summary: <strong>{{ data['jira_ticket_des'] }}</strong></p>
    <p>Work Directory: <strong>{{ data['work_dir'] }}</strong></p>
    <p>Scratch Directory: <strong>{{ data['scratch_dir'] }}</strong></p>
    <p>Archive Directory: <strong>{{ data['archive_dir'] }}</strong></p>
